[package]
name = "dataflow-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.0"
tree-sitter = "0.22.5"
tree-sitter-java = "0.21.0"
anyhow = "1.0.82"
serde = { version = "1.0.197", features = ["derive"] }